--- a/Strona Agro/style.css
+++ b/Strona Agro/style.css
@@ -32,7 +32,13 @@ header{
     min-height:100%;
 	position:relative;
 }
-                        
+a{
+    color: #ffbf00;
+    text-decoration: none;
+}
+a:hover{
+    color: white;
+}
 #gorna_czesc_kontenera {
     position:relative;
     margin-top: 5px;
@@ -43,7 +49,7 @@ header{
 /*-------------------------------------ROZWIJANE MENU--------------------------------------*/
                         
 #menu {
-    margin-left: 27%;
+    margin-left: 22%;
 }
                         
 #menu ul {
@@ -126,29 +132,19 @@ header{
     transition: 0.8s;
     opacity: 1;
 }
-/*-------------------------------------------------------------------------------------------*/
-                        
+/*-------------------------------------------------------------------------------------------*/                       
 #infobox {
     height: 380px;
     background-color: #ffbf00;
-}
-                        
+}                       
 #infobox_break {
     height: 30px;
 }
-#kontakt_box {
-    position: absolute;
-    right: 10px;
-    top: 2px;
-    font-family: Helvetica, sans-serif;
-    color: #ffbf00;
-    line-height: 125%;
-}
 /* -----------------------------------------ZAWARTOŚĆ GŁÓWNA STRONY-----------------------------------------*/
                         
-#zawartosc {
+/*#zawartosc {
     width: 944px;
- }
+ }*/
                         
 #gorna_czesc_zawartosci {
     background-image: url('obrazy/Agro_zdjecie.webp');
@@ -170,47 +166,23 @@ p{
     margin-bottom: 15px;
 }
 /*----------------------------------------------FOOTER-----------------------------*/
-#footer 
-{ 
-    bottom:0;
-    border: 3px dotted red;
-    height: 125px;
-    color:#FFF; 
-    width:100%;
-}
-#footer2
+#footer
 {
     position:absolute;
 	bottom:0;
 	width:100%;
-	height:60px;		/* Wysokość stopki */
-	background:#b5fbbd;
+	height:100px;		/* Wysokość stopki */
+	background-color: darkmagenta;
 }
 #zawartosc2
 {
 	padding:10px;
-	padding-bottom:60px;	/* Wysokość stopki */
-}
-#nav_box {
-    position: absolute;
-    right:700px;
-    top: 2140px;
-    font-family: Helvetica, sans-serif;
-    color:white;
-}
-#nav_box table tr td{
-    font-size: 30px;
-    left:50px;
+	padding-bottom:100px;	/* Wysokość stopki */
 }
 #img{
     position: absolute;
     right:910px;
     top: 2145px;
-}
-#foot_info {
-    position: absolute;
-    font-size: 30px;
-    left: 40px;
 }
 #link tr td a{
     font-size: 20px;
@@ -220,20 +192,15 @@ p{
 #link tr td a:hover{
     color:greenyellow;
 }
-#ikonka{
-
-}
-
 /* ---------------------------------------------------------button kontakt----------------------------------------*/
 .button {
     position: absolute;
-   
     padding: 30px 50px;
     font-size: 24px;
     cursor: pointer;
     text-align: center;
     text-decoration: none;
-    /*outline: none;*/
+    outline: none;
     color: #fff;
     background-color: #3e8e41;
     border: none;
