--- a/Strona Agro/style.css
+++ b/Strona Agro/style.css
@@ -177,16 +177,16 @@ p{
     text-decoration: none;
     outline: none;
     color: #fff;
-    background-color: #3e8e41;
+    background-color: #000000;
     border: none;
     border-radius: 15px;
     box-shadow: 0 9px #999;
 }
   
-.button:hover {background-color: #4CAF50}
+.button:hover {background-color: #808080}
   
 .button:active {
-    background-color: #4CAF50;
+    background-color: #808080;
     box-shadow: 0 5px #666;
     transform: translateY(4px);
   }
@@ -288,4 +288,42 @@ p{
   from {opacity: .4}
   to {opacity: 1}
 }
-/*******************************SLIDER KONIEC*********************************/
+
+  /*******************************SLIDER KONIEC*********************************/
+
+  /*******************************kontaktBox************************************/
+#kontaktBox{
+    width: 1400px;
+    left:50%;
+    height:900px;
+}
+#kontaktBox2{
+    position: relative;
+    width:85%;
+    height: 50%;
+    border: 2px solid green;
+}
+#nav{
+    padding: 5px;
+    width: 1450px;
+    left:50%;
+    height:580px;
+}
+label{
+    position: absolute;
+    left: 0;
+    font-size: 20px;
+}
+input{
+    position: absolute;
+    left:0px;
+}
+textarea{
+    position: absolute;
+    width:100%;
+    height: 150px;
+    left:0px;
+}
+
+
+  /*******************************koniec kontaktBox************************************/
